# object_scores

./: README.md  design_philosophy.txt  pyproject.toml
scripts/: bri_data.ipynb  intro.ipynb
src/object_scores/: __init__.py  core.py  plotting.py  scores.py
