[project]
name = "object-scores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chrishalcrow", email = "chrishalcrow@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "polars>=1.34.0",
    "pynapple>=0.9.2",
    "xarray>=2025.10.1",
]

[project.scripts]
object-scores = "object_scores:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

